Update README.md
update run application settings